@@ -11,10 +11,14 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-28
+2015-01-09 Mikhail S. Dubrovin	
+- GeometryObject (C++) - fix minor issue with update of coordinate eveluation
+
 Tag: V00-02-27
 2015-01-09 Mikhail S. Dubrovin	
 - GeometryAccess & GeometryObject (C++ & py) - propagate do-tilt parameter 
-	from get_pix_coords and get_pix_coord_indexes to transform_geo_coord_arrays
+	from get_pix_coords and get_pix_coord_indexes to transform_geo_coord_arrays (PSAS-11)
 
 Tag: V00-02-26
 2014-11-21 Mikhail S. Dubrovin	
